--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-email-create></app-email-create>
-<app-email-list></app-email-list>
+<div class="main container-fluid">
+
+<router-outlet></router-outlet>
+</div>
+
